fixed visible order history

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,8 +21,9 @@ textarea {
 }
 
 .text-red {
-  color:#ff0000;
+  color: #ff0000;
 }
+
 .border-error {
   border: 3px solid #ff0000
 }
@@ -37,7 +38,7 @@ textarea {
   flex-wrap: wrap;
 }
 
-input[type="file"]{
+input[type="file"] {
   display: none;
 }
 
@@ -45,7 +46,12 @@ input[type="file"]{
   padding: 10px;
   background-color: #FDD99E;
   background-image: url(/public/allImage/fone2.svg);
-  background-repeat: repeat
+  background-repeat: repeat;
+  max-height: 400px;
+}
+
+.personal-cabinet_wrap {
+  overflow: scroll ;
 }
 
 .flex-reverse {
@@ -86,10 +92,10 @@ input[type="file"]{
 
 .element-sorting-wrap {
   position: sticky;
-    display: flex;
-    top: 40px;
-    flex-direction: row-reverse;
-    align-items: flex-start;
+  display: flex;
+  top: 40px;
+  flex-direction: row-reverse;
+  align-items: flex-start;
 }
 
 .sction-footer-bg {
@@ -102,7 +108,7 @@ input[type="file"]{
   align-items: stretch;
   padding: 20px 0px;
   background-image: url(/public/allImage/header.png);
-  background-color:$main-collor;
+  background-color: $main-collor;
   background-size: 100% 140px;
 }
 
@@ -118,19 +124,19 @@ input[type="file"]{
   z-index: 999;
 }
 
-.error-mesage{
+.error-mesage {
   width: 91%;
-    height: 70px;
-    background-color: #FDD99E;
-    border: 2.5px solid #6E492A;
-    border-radius: 10px;
-    position: absolute;
-    top: 10px;
-    z-index: 999;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    background-image: url(http://172.16.2.181:8080/img/fonebox2.32716d15.svg);
+  height: 70px;
+  background-color: #FDD99E;
+  border: 2.5px solid #6E492A;
+  border-radius: 10px;
+  position: absolute;
+  top: 10px;
+  z-index: 999;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  background-image: url(http://172.16.2.181:8080/img/fonebox2.32716d15.svg);
 }
 
 .display {
@@ -161,7 +167,7 @@ input[type="file"]{
 .wrap {
   // background-size: auto 100%;
   background-image: url(/public/allImage/fone.png);
-  background-color:$main-collor;
+  background-color: $main-collor;
   background-repeat: repeat;
   max-width: 1920px;
   margin: auto;
@@ -180,6 +186,7 @@ input[type="file"]{
 .z-1 {
   z-index: -1;
 }
+
 .catalog-items-admin {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -225,9 +232,11 @@ input[type="file"]{
   top: 0;
   right: 0;
 }
+
 .btn-text {
   @include btn-text;
 }
+
 .space-between {
   display: flex;
   justify-content: space-between;
@@ -261,13 +270,13 @@ input[type="file"]{
 
 .column-centered {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    max-width: 300px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 300px;
 }
 
-.flex-start {  
+.flex-start {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -323,7 +332,7 @@ input[type="file"]{
   cursor: pointer;
   padding: 5px 10px;
   color: $main-collor;
-  
+
 }
 
 .catalog-element {
@@ -342,9 +351,9 @@ input[type="file"]{
 }
 
 .description {
-  position: absolute; 
-  height: 99%; 
-  width: 99%; 
+  position: absolute;
+  height: 99%;
+  width: 99%;
   background-image: url(/public/allImage/fonebox2.svg);
   box-shadow: -3px 11px 20px 1px rgb(55 35 17 / 54%);
   max-width: 450px;
@@ -406,7 +415,6 @@ input[type="file"]{
 .header-list-mobile {
   display: none;
 }
-
 
 
 .centered {
@@ -474,8 +482,7 @@ input[type="file"]{
 
 .header-list-item {
   display: flex;
-  align-items:
-    center;
+  align-items: center;
   margin-right: 10px;
 }
 
@@ -625,7 +632,6 @@ p {
 }
 
 
-
 .button-right {
   display: flex;
   justify-content: flex-end;
@@ -743,7 +749,7 @@ input::placeholder {
 
 .cart-img {
   width: 140%;
-  border-radius: 10px; 
+  border-radius: 10px;
 }
 
 .filter {
@@ -753,7 +759,6 @@ input::placeholder {
   padding: 0px 20px;
   @include border-radius;
 }
-
 
 
 .catalog-items {
@@ -800,17 +805,17 @@ input::placeholder {
 //   transition: 0.4s;
 // }
 .catalog-element {
-    background-color: #ffeacade;
-    border-radius: 10px;
-    position: relative;
-    box-shadow: -3px 11px 20px 1px #3723118a;
-    max-width: 350px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 5px;
-    transition: 0.4s;
+  background-color: #ffeacade;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: -3px 11px 20px 1px #3723118a;
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 5px;
+  transition: 0.4s;
 }
 
 .delivery {
@@ -1023,7 +1028,8 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: center;}
+  align-content: center;
+}
 
 .logo-footer {
   width: auto;
@@ -1206,7 +1212,7 @@ input::placeholder {
     padding-right: 20px;
   }
 
-  .header-list-mobile{
+  .header-list-mobile {
     top: 80px;
     padding: 10px 20px;
   }
@@ -1236,11 +1242,10 @@ input::placeholder {
 
   .catalog-items {
     margin-left: 0px;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    ;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));;
   }
   .header {
-    background-image:none
+    background-image: none
   }
   // .catalog-element-img {
   //   max-width: 80%;
@@ -1267,9 +1272,9 @@ input::placeholder {
     flex-direction: column
   }
 
-.catalog-items-admin {
-  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
-}
+  .catalog-items-admin {
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  }
 
 }
 
